--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <div class="bottom-overlay">
             <div class="header">
                 <h2 style="margin: 0 0 5px; font-size: 18px;">AIDC沙河智算中心</h2>
-                <div style="font-size: 13px; color: #555555; font-weight: bold;">SheHe Artificial Intelligent  Data Center</div>
+                <div style="font-size: 13px; color: #555555; font-weight: bold;">ShaHe Artificial Intelligent  Data Center</div>
             </div>
             <div class="welcome-text">
                 欢迎来访沙河智算中心，按照我司来访管理规定，需登记本人身份证，请如实填写个人信息，感谢您的配合。
